--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "1.1.4",
     "tachyons": "^4.11.0"
   },
-  "homepage": "http://efraimlorenzana.github.io/robot-friends",
+  "homepage": "https://efraimlorenzana.github.io/robot-friends/build/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
