--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "react-scripts": "1.1.4",
     "tachyons": "^4.11.0"
   },
-  "homepage": "https://efraimlorenzana.github.io/robot-friends/build/",
+  "homepage": "https://efraimlorenzana.github.io/robot-friends/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -b master — repo https://github.com/efraimlorenzana/robot-friends.git"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
