--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "bootstrap": "^4.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.0"
   },
   "homepage": "https://efraimlorenzana.github.io/robot-friends/",
